Minor findbugs fix for OFSwitchBase